# libredwgpp

./: CMakeLists.txt  errorcodes.cpp  errorcodes.h  includes-pch.h  includes.h  libredwg2.h  test.cpp
file/: archive.cpp  archive.h  loader.cpp  loader.h
parser/: class.cpp  class.h  colour.h  decoder.h  decoder2004_2.cpp  decoder2004_2.h  dwgbuffer.cpp  dwgbuffer.h  entitydata.h  handle.cpp  handle.h  object.h  page.h  parser.cpp  parser.h  parser2004.cpp  parser2004.h  section.cpp  section.h  section2004.h  version.cpp  version.h
parser/objects/: block.cpp  block.h  blockcontrol.cpp  blockcontrol.h  dictionary.cpp  dictionary.h  entity.cpp  entity.h  face3d.cpp  face3d.h  group.cpp  group.h  insert.cpp  insert.h  layer.cpp  layer.h  line.cpp  line.h  lwpolyline.cpp  lwpolyline.h  object.cpp  object.h  shapefile.cpp  shapefile.h  undocumentedcontrol.cpp  undocumentedcontrol.h  vertex3d.cpp  vertex3d.h  viewport.cpp  viewport.h
parser/r2000/: parser2000.cpp  parser2000.h
parser/r2004/: decoder2004_2.cpp  decoder2004_2.h  parser2004.cpp  parser2004.h  section2004.cpp  section2004.h  sectionclasses.cpp  sectionclasses.h  sectiondata.cpp  sectiondata.h  sectioninfo.cpp  sectioninfo.h  sectionmap.cpp  sectionmap.h  sectionobjects.cpp  sectionobjects.h  sectionpage.cpp  sectionpage.h
parser/sections/: classes.cpp  classes.h  objects.cpp  objects.h
schema/: colour.cpp  colour.h  face3d.cpp  face3d.h  schema.h  vertex3d.h
